--- a/capstone/package.json
+++ b/capstone/package.json
@@ -1,9 +1,12 @@
 {
+  "homepage": "https://<Vaibhav-Rajput-connect>.github.io/<Capstone-Project-Loan-Calculator->",
   "name": "capstone",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -30,5 +33,4 @@
     "tailwindcss": "^3.4.1",
     "vite": "^6.3.5"
   }
-  
 }
