--- a/capstone/package.json
+++ b/capstone/package.json
@@ -13,9 +13,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dom": "^0.0.3",
     "motion": "^12.23.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router": "^7.7.0",
+    "react-router-dom": "^7.7.0",
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
